<resources>
    <string name="app_name">田块采集</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="search_envelope_text">下载切片</string>
    <string name="map_min_x_text_hint">x最小</string>
    <string name="map_min_y_text_hint">y最小</string>
    <string name="map_max_x_text_hint">x最大</string>
    <string name="map_max_y_text_hint">y最大</string>
    <string name="map_max_level_text_hint">下载的最大级别</string>
    <string name="map_min_level_text_hint">下载的最小级别</string>
    <string name="start_down">开始下载</string>
    <string name="edit_text_null_error">文本不能为为空</string>
    <string name="location_button_text">开始定位</string>
    <string name="text_button">测试</string>
    <string name="draw_farmland_text">绘制田块</string>
    <string name="draw_farmland_point_text">绘制点</string>
    <string name="tel_text">电话</string>
    <string name="farm_name_text">姓名</string>
    <string name="address_text">地址</string>
    <string name="area_text">面积（亩）</string>
    <string name="submit_text">提交</string>
    <string name="province_name">省份</string>
    <string name="city_name">市名</string>
    <string name="county_name">区名</string>
    <string name="town_name">镇名</string>
    <string name="village_name">村名</string>
    <string name="delete_text">删除</string>
    <string name="select_text">选中</string>
    <string name="edit_text">编辑</string>
    <string name="cancel_text">取消</string>
    <string name="zoom_in">缩小</string>
    <string name="zoom_out">放大</string>
    <string name="upload_farmland">田块上传</string>
    <string name="level_text">当前级别</string>
    <string name="surplus_num">剩余</string>
    <string name="percent">百分比</string>
    <string name="error_text">错误个数</string>
</resources>
