<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:attribute ="http://schemas.android.com/apk/res-auto"

              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <!--  double x = handle_y(39.9738);//4862135.696342695
        double x1 = handle_y(39.871);//4847214.019830739

        double y = handle_x(116.348264);//1295182.9501358455E7
        double y1 = handle_x(116.436847);//129616.90515810022E7-->

    <!--116.29577636719, 39.998474121094
    12945986.606604, 4838237.908444
 116.45507812501, 39.795227050781
12963719.997167, 4808863.746261-->

   <com.caobugs.gis.view.map.MapView
        android:id="@+id/baseMap"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        attribute:min_x = "12945986.606604"
        attribute:min_y = "4838237.908444"
        attribute:max_x = "12963719.997167"
        attribute:max_y = "4808863.74626"
        />

   <Button
        android:id="@+id/search_envelope"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_envelope_text"
        />


    <LinearLayout
        android:id="@+id/selected_tool_layout"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        >

        <Button
            android:id="@+id/delete_farmland"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/delete_text"
            />
        <Button
            android:id="@+id/edit_farmland"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/edit_text"
            />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel_text"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/map_draw_tool_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        >
        <Button
            android:id="@+id/select_farmland"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_text"
            />

        <Button
            android:id="@+id/location_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location_button_text"
            />

        <Button
            android:id="@+id/draw_farmland"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/draw_farmland_text"
            />

        <Button
            android:id="@+id/draw_farmland_point"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/draw_farmland_point_text"
            android:visibility="gone"
            />
    </LinearLayout>


</RelativeLayout>