<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tel_text"
        />
        <EditText
            android:id="@+id/edit_farmland_info_tel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
        />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/farm_name_text"
        />
        <EditText
            android:id="@+id/edit_farmland_info_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <Button
        android:id="@+id/edit_submit_farmland"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit_text"
    />
</LinearLayout>